// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Button will have a disabled attribute correctly 1`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--xl disabled"
  disabled=""
>
  <div
    class="ss-button--wrapper"
  >
    
    <div
      class="ss-button--icon"
    >
      <font-awesome-icon-stub />
    </div>
    
    
    <div
      class="ss-button--label has-icon"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a icon correctly 1`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--xl"
>
  <div
    class="ss-button--wrapper"
  >
    
    <div
      class="ss-button--icon"
    >
      <font-awesome-icon-stub />
    </div>
    
    
    <div
      class="ss-button--label has-icon"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a inverse variant color correctly 1`] = `
<button
  class="ss-button ss-button--primary-inverse ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a inverse variant color correctly 2`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a label correctly 1`] = `
<button
  class="ss-button ss-button--light ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a pill correctly 1`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--xl pill disabled"
  disabled=""
>
  <div
    class="ss-button--wrapper"
  >
    
    <div
      class="ss-button--icon"
    >
      <font-awesome-icon-stub />
    </div>
    
    
    <div
      class="ss-button--label has-icon"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a size correctly 1`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--xs"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a size correctly 2`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--sm"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a size correctly 3`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a size correctly 4`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--lg"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a size correctly 5`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--xl"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a text bold correctly 1`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--xl text-bold pill disabled"
  disabled=""
>
  <div
    class="ss-button--wrapper"
  >
    
    <div
      class="ss-button--icon"
    >
      <font-awesome-icon-stub />
    </div>
    
    
    <div
      class="ss-button--label has-icon"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a variant color correctly 1`] = `
<button
  class="ss-button ss-button--primary ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a variant color correctly 2`] = `
<button
  class="ss-button ss-button--danger ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a variant color correctly 3`] = `
<button
  class="ss-button ss-button--warning ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a variant color correctly 4`] = `
<button
  class="ss-button ss-button--dark ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will have a variant color correctly 5`] = `
<button
  class="ss-button ss-button--success ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will not a rounded correctly 1`] = `
<button
  class="ss-button ss-button--danger-inverse ss-button--xl no-rounded disabled"
  disabled=""
>
  <div
    class="ss-button--wrapper"
  >
    
    <div
      class="ss-button--icon"
    >
      <font-awesome-icon-stub />
    </div>
    
    
    <div
      class="ss-button--label has-icon"
    >
      
      This is common button
      
    </div>
    
  </div>
</button>
`;

exports[`common/Button will render and match snapshot 1`] = `
<button
  class="ss-button ss-button--light ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
</button>
`;

exports[`common/Button will trigger click event correctly 1`] = `
<button
  class="ss-button ss-button--light ss-button--base"
>
  <div
    class="ss-button--wrapper"
  >
    <!--v-if-->
    
    <div
      class="ss-button--label"
    >
      
      Click me!
      
    </div>
    
  </div>
</button>
`;
